// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutoReplyFAQModal/> should render the autoclose spam body when automation add-on is subscribed 1`] = `
<div
  class="managedRule autoReplyFAQ"
>
  <div
    class="container"
  >
    <div
      class="description"
    >
      <div
        class="count"
      >
        <div
          class="targetTitle"
        >
          target up to
        </div>
        <div
          class="targetValue"
        >
          <span
            class="bold"
          >
            10
          </span>
           
          tickets/month
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Help shoppers find answers faster
        </h4>
        <p>
          This rule automatically identifies incoming questions via email and replies with relevant article suggestions from your help center.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Customize the message
        </h4>
        <p>
          Personalize your message to align with your brand.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="addendum"
        >
          If your customer replies to this message, it will reappear as a regular ticket.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        checkbox
      </div>
    </div>
    <div
      class="example"
    >
      <div
        class="exampleContainer bordered"
      >
        <div
          class="fakeMessage"
        >
          <div
            class="component"
            style="width: 28px; height: 28px;"
          >
            <div
              class="initials"
              style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
            >
              <span
                style="line-height: 30px;"
              >
                Cn
              </span>
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name"
            >
              Client Name
            </div>
            <div>
              Hey, I'm not sure what size to order, can you help me out?
            </div>
          </div>
        </div>
        <div
          class="fakeMessage"
        >
          <div>
            <div
              class="component hasImage"
              style="width: 28px; height: 28px;"
            >
              <div
                class="initials"
                style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
              >
                <span
                  style="line-height: 30px;"
                />
              </div>
              <img
                alt="avatar"
                class="gravatar"
                src="/static/private/js/assets/img/icons/logo.png"
              />
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name autoResponder"
            >
              <i
                class="material-icons mr-1"
              >
                auto_awesome
              </i>
              Auto Responder
            </div>
            <div>
              <p>
                Hi Client Name,
              </p>
              <p>
                Thank you for contacting us!
              </p>
              <p>
                We found an article from our help center that might provide the information you’re looking for. Click the preview below to open and read more.
              </p>
              <div
                class="container FAQArticle"
              >
                <div
                  class="articleTitle"
                >
                  What size should I order
                </div>
                <div
                  class="articleDescription"
                >
                  <p>
                    Unsure what size will work? Check out our sizing guide located above the sizes offered on each product page for exact measure...
                  </p>
                  <p
                    class="articleLink"
                  >
                    Read more
                  </p>
                </div>
              </div>
              <p>
                This is an automated message. If it does not answer your question, just reply to this message and we will get back to you as soon as possible.
              </p>
              <p>
                Jane Smith
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AutoReplyFAQModal/> should render the autoclose spam body when automation add-on is subscribed 2`] = `
<div
  class="managedRule autoReplyFAQ bordered"
>
  <div
    class="titleWrapper"
  >
    <span
      class="title"
    >
      my rule
    </span>
    tags
  </div>
  <div
    class="container"
  >
    <div
      class="description"
    >
      <div
        class="count"
      >
        <div
          class="targetTitle"
        >
          target up to
        </div>
        <div
          class="targetValue"
        >
          <span
            class="bold"
          >
            10
          </span>
           
          tickets/month
        </div>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Help shoppers find answers faster
        </h4>
        <p>
          This rule automatically identifies incoming questions via email and replies with relevant article suggestions from your help center.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <h4>
          Customize the message
        </h4>
        <p>
          Personalize your message to align with your brand.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        <p
          class="addendum"
        >
          If your customer replies to this message, it will reappear as a regular ticket.
        </p>
      </div>
      <div
        class="descriptionBlock"
      >
        checkbox
      </div>
    </div>
    <div
      class="example"
    >
      <div
        class="exampleContainer bordered"
      >
        <div
          class="fakeMessage"
        >
          <div
            class="component"
            style="width: 28px; height: 28px;"
          >
            <div
              class="initials"
              style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
            >
              <span
                style="line-height: 30px;"
              >
                Cn
              </span>
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name"
            >
              Client Name
            </div>
            <div>
              Hey, I'm not sure what size to order, can you help me out?
            </div>
          </div>
        </div>
        <div
          class="fakeMessage"
        >
          <div>
            <div
              class="component hasImage"
              style="width: 28px; height: 28px;"
            >
              <div
                class="initials"
                style="width: 28px; height: 28px; font-size: 11.666666666666668px;"
              >
                <span
                  style="line-height: 30px;"
                />
              </div>
              <img
                alt="avatar"
                class="gravatar"
                src="/static/private/js/assets/img/icons/logo.png"
              />
            </div>
          </div>
          <div
            class="ml-3"
          >
            <div
              class="name autoResponder"
            >
              <i
                class="material-icons mr-1"
              >
                auto_awesome
              </i>
              Auto Responder
            </div>
            <div>
              <p>
                Hi Client Name,
              </p>
              <p>
                Thank you for contacting us!
              </p>
              <p>
                We found an article from our help center that might provide the information you’re looking for. Click the preview below to open and read more.
              </p>
              <div
                class="container FAQArticle"
              >
                <div
                  class="articleTitle"
                >
                  What size should I order
                </div>
                <div
                  class="articleDescription"
                >
                  <p>
                    Unsure what size will work? Check out our sizing guide located above the sizes offered on each product page for exact measure...
                  </p>
                  <p
                    class="articleLink"
                  >
                    Read more
                  </p>
                </div>
              </div>
              <p>
                This is an automated message. If it does not answer your question, just reply to this message and we will get back to you as soon as possible.
              </p>
              <p>
                Jane Smith
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
